--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-number-format": "^5.4.4",
     "react-router": "^7.5.0"
   },
   "devDependencies": {
